# ai_writer

./: .env.example  .gitignore  pyproject.toml
.lingma/rules/: project_rule.md
backend/app/: main.py
backend/app/core/: config.py
backend/app/database/: session.py
backend/app/models/: __init__.py  annotation.py  chapter.py  character.py  creation_log.py  feedback_record.py  session_state.py  template.py  version_history.py  work.py  world_setting.py
docs/: 技术架构.md  研发计划.md  项目规划.md
docs/详细计划/: 第一阶段.md
frontend/: package.json
frontend/src/: index.html
frontend/src-tauri/: tauri.conf.json
