[tool.poetry]
name = "ai_writer"
version = "0.1.0"
description = "An AI-powered writing assistant tool"
authors = ["CatonChen <lordch@163.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
pydantic = "^2.5.0"
python-multipart = "^0.0.6"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"
langchain = "^0.2.0"
langgraph = "^0.0.63"
openai = "^1.10.0"
tiktoken = "^0.5.1"
requests = "^2.31.0"
pypdf = "^4.0.0"
unstructured = "^0.12.5"
chromadb = "^0.5.0"
sentence-transformers = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.12.0"
pre-commit = "^3.5.0"
bandit = "^1.7.5"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true